<resources>
    <string name="app_name">Keep It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainNavText">Discover the Future Book and Note Searching !</string>
    <string name="navMainSubText">Access a vast library of books and notes anytime, anywhere. Learn on the go with our app.</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="loginWelcomeMsg">Welcome \nBack !</string>
    <string name="linktoLogin">Already have an account?</string>
    <string name="delete_icon_description">Delete item</string>


    <string name="spinner_prompt">Select an option</string>
    <string-array name="spinner_options">
        <item>AL</item>
        <item>University</item>
    </string-array>
    <string name="s_T_col1">Payment Id</string>
    <string name="s_T_col2">Date</string>
    <string name="s_T_col3">Amount</string>
    <string name="s_T_row1PID">P004</string>
    <string name="s_T_row1date">2023-apr-25</string>
    <string name="s_T_row1amount">1250.00</string>


    <string name="spinner2_prompt_al">Select Stream</string>
    <string-array name="spinner2_options_al">
        <item>Maths</item>
        <item>Biology</item>
        <item>Art</item>
        <item>Commerce</item>
        <item>Technology</item>
    </string-array>

    <string name="spinner2_prompt_university">Select Stream</string>
    <string name="dividerline">____________________________________________________</string>
    <string name="dFirstName">First Name</string>
    <string name="dLastName">Last Name</string>
    <string name="dEmail">Email</string>
    <string name="dMobileNumber">Mobile Number</string>
    <string name="dUpdate">Update</string>
    <string name="dUpdatePass">Change Password</string>
    <string name="dDeleteAcc">Delete Account</string>
    <string-array name="spinner2_options_university">
        <item>Computing</item>
        <item>Engineering</item>
        <item>Business</item>
        <item>Law</item>
        <item>Medical</item>
        <item>Science</item>
    </string-array>


    <string name="listing_dash_title2"><u>Here Is Your Listed Books</u></string>

</resources>