<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131A22"
    tools:context=".Activity.Activity.MainNavigator" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="352dp"
        android:layout_height="364dp"
        android:layout_marginBottom="500dp"
        android:background="@drawable/mainnavigatorimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="370dp"
        android:background="@drawable/main_navigator"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/navMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/mainNavText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/navMainSubText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/navMainSubText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/navMainSignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/main_nav_btn"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <Button
                android:id="@+id/navMainLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/main_nav_btn"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>