<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Activity.Activity.ProfileSettings">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/profileimg_large" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/main_navigator"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingRight="20dp"
            android:text="@string/dFirstName"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/inputbox_outline"
                android:paddingLeft="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dLastName"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/inputbox_outline"
                android:paddingLeft="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dEmail"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/inputbox_outline"
                android:paddingLeft="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dMobileNumber"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/inputbox_outline"
                android:paddingLeft="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/main_nav_btn"
            android:text="@string/dUpdate"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>