<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131A22"
    tools:context=".Activity.Activity.Insert_Book">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="List Your Book Here"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/uploadacivitybg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <!-- Image view for selecting an image -->

                <!-- Title EditText -->

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="30dp"
                    android:contextClickable="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_gradient" />


                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:hint="Title"
                    android:textSize="20sp" />

                <!-- Price EditText -->
                <EditText
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="Price"
                    android:textSize="20sp" />

                <!-- Description EditText -->
                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="Description"
                    android:textSize="20sp" />

                <!-- Category Spinner -->
                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:contextClickable="true"
                    android:entries="@array/spinner_options"
                    android:prompt="@string/spinner_prompt"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner2_al"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/spinner2_options_al"
                    android:prompt="@string/spinner2_prompt_al"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/spinner2_university"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/spinner2_options_university"
                    android:prompt="@string/spinner2_prompt_university"
                    android:visibility="gone" />
                <!-- Phone EditText -->

                <!-- Address EditText -->
                <EditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="Address"
                    android:textSize="20sp" />

                <!-- Upload Button -->
                <Button
                    android:id="@+id/uploadButton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/main_nav_btn"
                    android:text="Upload"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>